dynamically_typed_tests/invalid/function/functionBadArgUse.wacc
# function parameter misuse

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int x) is
    b = x && true ;
		return 0
	end
  x = call f(0) 
end
	
